# lidar_preprocessor

./: CMakeLists.txt  README.md  package.xml
config/: angle_filter.yaml  multi_lidar_filter.yaml
include/lidar_preprocessor/: angle_filter.hpp  multi_lidar_filter.hpp
launch/: angle_filter.launch.py  multi_lidar_filter.launch.py
src/modules/: angle_filter.cpp  multi_lidar_filter.cpp
src/nodes/: angle_filter_node.cpp  multi_lidar_filter_node.cpp
